Update swagger page
